[project]
name = "qos-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "python-multipart>=0.0.20",
    "torch>=2.6.0",
    "torch-vision>=0.1.6.dev0",
    "ultralytics>=8.3.108",
    "uvicorn[standard]>=0.34.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]
